# The-Dark-Crystal

./: .gitignore  CMakeLists.txt  README.md
data/gui/: MyGUI_BlueWhiteTemplates.xml  MyGUI_Fonts.xml  MyGUI_Settings.xml
data/texts/: QATestFile.xml
data/xml/: MonsterAttribute.xml  SpaceshipAttribute.xml  WeaponAttribute.xml
docs/changes/: Project Change Report.doc
docs/conclusion/: Jiang Jiazhi.doc  Personal Conclusion - JiangYangMu.doc  Personal Conclusion Li Yuandong TMP-SE.doc  Personal Conclusion LiuXianjie TMP-SE.doc  Personal Conclusion RaoJi.doc  Personal Conclusion Xu Jianming TMP-SE.doc  Personal Resume_zhoujinyuan.doc  Project Conclusion Report TMP-PRR.doc  Software Testing Review.docx  chenyiqing_personalConclusion.docx
docs/design/: AI Design.doc  AI State Diagram.psd  Conception Design Report TMP-CDR.doc  Detailed Class Diagram.vpp  Detailed Class Diagram.vpp~2  Detailed Class Diagram.vpp~3  Detailed Design Report TMP-DDR.doc  File Format.docx  GameFlow.doc  The story.docx  Vehicle Design.doc  Weapon Design - RJ - 2.0.doc  Weapon Design - RJ.doc  persona design - XJM - 2.0.docx  persona design - XJM.docx  ~$rsona design.docx
docs/meetings/: MeetingRecord_May29_byChenyiqing.docx  MeetingRecord_May30th_byChenyiqing.docx  MeetingReport_531_byChenyiqing.docx
docs/plan/: Configuration Management Plan TMP-SCMP.doc  Dark_Crystal组的角色分配.xlsx  One more time, One more chance. The Plan for Summer Holidays.docx  Project Development Plan.doc  Project Development Plan_Beta1.0.doc  Project Development Plan_Beta1.5.doc  Project Development Plan_Beta2.0.doc  Project Mission Description TMP-PTR.doc  Software Test Plan TMP-STP.doc  The-Dark-Crystal Project Development Plan_alpha1.0_.doc  project.mpp  ~$e-Dark-Crystal Project Development Plan_alpha1.0_.doc  ~$oject Development Plan.doc  ~WRL0001.tmp  进度对照.xlsx  项目任务简述.doc
docs/reports/Week 1/: Report_JiangJiaZhi.doc  Report_chenyiqing.doc  Report_jiangyangmu.doc  Report_liuxianjie.doc  Report_liyuandong.doc  Report_xujianming.doc  Report_zhoujinyuan.doc  Weekly Report.doc  report_raoji.doc
docs/reports/Week 2/: Report_JiangJiaZhi.doc  Report_chenyiqing.doc  Report_jiangyangmu.doc  Report_liuxianjie.doc  Report_liyuandong.docx  Report_xujianming.doc  Report_zhoujinyuan.doc  report_raoji.doc
docs/requirement/: Requirement Analysis TMP-RAP.doc  The-Dark-Crystal - Game Plan v0.1.docx  Usecase diagram.uml
docs/test/: Issue List TMP-TBR.doc  TestCases TMP-TC.doc  TestRecord.doc  Testing Review TMP-TR.doc
docs/user/: 用户手册 TMP-UG.doc
src/main/: AIDivideAreaManager.cpp  AIDivideAreaManager.h  AdvanceCollisionComponent.cpp  AdvanceCollisionComponent.h  AdvanceTriggerAreaComponent.cpp  AdvanceTriggerAreaComponent.h  Agent.cpp  Agent.h  Alien.cpp  Alien.h  Ammo.cpp  Ammo.h  Animation.cpp  Animation.h  AnimationState.cpp  AnimationState.h  AttackDetectComponent.cpp  AttackDetectComponent.h  BattleState.cpp  BattleState.h  Car.cpp  Car.h  Character.cpp  Character.h  ClosestNotMeNotDynamicObjectConvexResultCallback.cpp  ClosestNotMeNotDynamicObjectConvexResultCallback.h  ConfigurationManager.cpp  ConfigurationManager.h  ControlSetting.cpp  ControlSetting.h  ControllerComponent.cpp  ControllerComponent.h  CreaditState.cpp  CreaditState.h  Crystal.cpp  Crystal.h  Definitions.h  Entity.cpp  Entity.h  EntityManager.cpp  (+64 more)
src/test/: AIAlienTest.cpp  AIAlienTest.h  AITest.cpp  AITest.h  AlienTest.cpp  AlienTest.h  BattleStateTest.cpp  BattleStateTest.h  ConfigurationManagerTest.cpp  QAManagerTest.cpp  QATestFile.xml  StateChangeTest.h  Text.xml  TextManangerTest.cpp
(+24 files in other folders)
